delete css utk contact

--- a/contact_project.html
+++ b/contact_project.html
@@ -21,7 +21,25 @@ google.maps.event.addDomListener(window, 'load', initialize);
 </head>
 
 <body>
-    
+<div class="main">
+          <div class="row-top">
+            <h1 style="color:#894690; font-size:60px; font-family:Curlz MT;">lady Course</h1>
+        <div class="topmenu">
+            <nav>
+                <a href="Index.html">Home</a>
+            <div class="dropdown">
+                <a class="dropbtn">Class</a>
+                <div class="dropdown-content">
+                    <a href="#">Knitting</a>
+                    <a href="#">Cooking</a>
+                    <a href="#">FLorist</a>
+                </div>
+            </div>
+                     <a href="contact_project.html">Contact </a>
+            </nav>
+        </div>
+          </div>
+</div>    
 <div class="menu">
     <nav>
         <a href="index_project.html">Home</a>
