--- a/contact_project.html
+++ b/contact_project.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <link rel="contact_project" type="text/css" href="css/contact_project.css">
+    <link rel="contact_project_lc" type="text/css" href="css/contact_project_lc.css">
     <script
 src="http://maps.googleapis.com/maps/api/js">
 </script>
@@ -21,9 +21,10 @@ google.maps.event.addDomListener(window, 'load', initialize);
 </head>
 
 <body>
+    <!--menu-->
 <div class="main">
           <div class="row-top">
-            <h1 style="color:#894690; font-size:60px; font-family:Curlz MT;">lady Course</h1>
+            <h1 style="color:#894690; font-size:60px; font-family:Curlz MT;">Lady Course</h1>
         <div class="topmenu">
             <nav>
                 <a href="Index.html">Home</a>
@@ -39,6 +40,7 @@ google.maps.event.addDomListener(window, 'load', initialize);
             </nav>
         </div>
           </div>
+    <!--menu sampai disini-->
 </div>    
 <div class="menu">
     <nav>
