ubah judul page

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Edumom_classes</title>  
+    <title>Lady_Course</title>  
     <meta charset="utf-8">
 
 <link rel="stylesheet" href="css/style.css" type="text/css" media="screen">    
@@ -42,7 +42,7 @@ jQuery(window).load(function () {
                     <a href="#">FLorist</a>
                 </div>
             </div>
-                     <a href="rajut.html">Contact </a>
+                     <a href="contact_project.html">Contact </a>
             </nav>
         </div>
              </div>
